Fix overflow-x bug in votesPreview

--- a/src/components/votesPreview/votesPreview.css
+++ b/src/components/votesPreview/votesPreview.css
@@ -19,7 +19,6 @@
   height: 100%;
 
   & header {
-    width: 100%;
     margin-left: 30px;
     margin-top: 40px;
 
